chore: cleanup documentation and simplify README
- Move all guide files to docs/ folder (local only)
- Add docs/ to .gitignore
- Simplify README to essential info only
- Remove verbose documentation from repository

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ worker-configuration.d.ts
 # Database
 /drizzle/migrations/*.sql
 !drizzle/migrations/.gitkeep
+
+# Documentation (local only)
+/docs/
