fix: resolve Cloudflare Pages build errors
- Downgrade Next.js from 15.5.4 to 15.5.2 for @cloudflare/next-on-pages compatibility
- Add D1 and R2 bindings to env.production in wrangler.toml
- Fix peer dependency conflict with @cloudflare/next-on-pages@1.13.16

Fixes:
- npm ERESOLVE error: next@15.5.4 incompatible with adapter
- Wrangler warning: d1_databases and r2_buckets not inherited by production env

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -23,3 +23,14 @@ ENVIRONMENT = "development"
 # Production environment variables
 [env.production]
 vars = { ENVIRONMENT = "production" }
+
+# Production D1 Database binding
+[[env.production.d1_databases]]
+binding = "DB"
+database_name = "guru-wali-db"
+database_id = "3d60a482-1a12-4acd-8d6f-c60abf822bf3"
+
+# Production R2 Storage binding
+[[env.production.r2_buckets]]
+binding = "STORAGE"
+bucket_name = "guru-wali-storage"
