--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@react-pdf/renderer": "^4.3.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -41,6 +40,8 @@
     "drizzle-orm": "^0.36.0",
     "framer-motion": "^12.23.24",
     "iron-session": "^8.0.4",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.545.0",
     "nanoid": "^5.0.0",
     "next": "15.5.2",
