--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,7 @@
 
 name = "prj-guru-wali"
 compatibility_date = "2025-01-10"
+compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output/static"
 
 # D1 Database binding
