--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ worker-configuration.d.ts
 # SQL files (may contain sensitive data)
 /*.sql
 !schema.sql
+
+# Testing dummy data (local only)
+/lib/testing/
