--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx @cloudflare/next-on-pages",
     "start": "next start",
     "preview": "npm run build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy",
+    "deploy": "npm run build && wrangler pages deploy",
     "pages:build": "npx @cloudflare/next-on-pages",
     "check": "biome check .",
     "check:write": "biome check --write .",
