fix: prevent recursive build by configuring wrangler.toml
- Reverted package.json build to 'next build' for local dev
- Added explicit build command in wrangler.toml for Cloudflare Pages
- This avoids recursive calls between npm build and @cloudflare/next-on-pages

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "npx @cloudflare/next-on-pages",
+    "build": "next build",
     "start": "next start",
-    "preview": "npm run build && wrangler pages dev",
-    "deploy": "npm run build && wrangler pages deploy",
+    "preview": "npm run pages:build && wrangler pages dev",
+    "deploy": "npm run pages:build && wrangler pages deploy",
     "pages:build": "npx @cloudflare/next-on-pages",
     "check": "biome check .",
     "check:write": "biome check --write .",
