--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
+    "dev:wrangler": "wrangler pages dev --compatibility-date=2025-01-10 --d1=DB --port=3000 -- npm run dev",
     "build": "next build",
     "start": "next start",
     "preview": "npm run pages:build && wrangler pages dev",
@@ -15,10 +16,19 @@
     "format": "biome format --write .",
     "typecheck": "tsc --noEmit",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "wrangler d1 execute DB --local --file=./drizzle/migrations/*.sql",
-    "db:migrate:prod": "wrangler d1 execute DB --remote --file=./drizzle/migrations/*.sql",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "wrangler d1 execute DB --local --file=./drizzle/migrations/0000_bright_veda.sql && wrangler d1 execute DB --local --file=./drizzle/migrations/0001_cute_lilandra.sql",
+    "db:migrate:prod": "wrangler d1 execute DB --remote --file=./drizzle/migrations/0000_bright_veda.sql && wrangler d1 execute DB --remote --file=./drizzle/migrations/0001_cute_lilandra.sql",
     "db:studio": "drizzle-kit studio",
     "db:seed": "tsx ./drizzle/seed.ts",
+    "db:seed:dev": "tsx ./drizzle/seed-dev.ts",
+    "db:reset:dev": "wrangler d1 execute DB --local --command=\"DELETE FROM users; DELETE FROM students; DELETE FROM monthly_journals; DELETE FROM meeting_logs; DELETE FROM interventions; DELETE FROM school_profiles;\" && npm run db:seed:dev",
+    "db:setup:dev": "drizzle-kit push --config=drizzle.config.local.ts && npm run db:seed:dev",
+    "db:test:seed": "tsx ./drizzle/test-seed.ts",
+    "db:check:wrangler": "tsx ./drizzle/check-wrangler-db.ts",
+    "db:init:wrangler": "tsx ./drizzle/recreate-wrangler-tables.ts",
+    "db:sync:wrangler": "tsx ./drizzle/sync-to-wrangler.ts",
+    "db:full:dev": "npm run db:setup:dev && npm run db:init:wrangler && npm run db:sync:wrangler",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage"
